# sam

./: .gitignore  README.md  pyproject.toml
scripts/: calibrate_vad.sh  install.sh
src/sam/: __init__.py  __main__.py  agent.py  config.py  power.py  runtime.py
src/sam/backends/: __init__.py  llm.py  stt.py  tts.py
src/sam/tools/: __init__.py  builtins.py
systemd/: sam.service
tests/: test_smoke.py  test_voice.py
