[project]
name = "sam"
version = "0.1.0"
description = "SAM — the CPU-only, frontend-less battery agent. EVA family member #3."
readme = "README.md"
requires-python = ">=3.10"
# Core has ZERO hard deps: SAM runs in stub mode out of the box (smoke-testable
# with no models, no network). Real backends are opt-in extras below.
dependencies = []

[project.optional-dependencies]
# Reasoner over local Ollama (CPU-forced). Pulls nothing heavy — just an HTTP client.
ollama = ["httpx>=0.27"]
# Real speech in/out. Parakeet keeps SAM on the same CPU-STT lineage as Diana.
voice = ["onnx-asr>=0.4", "sounddevice>=0.4", "piper-tts>=1.2"]
dev = ["pytest>=8"]

[project.scripts]
sam = "sam.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sam"]

[tool.ruff]
line-length = 100
